🪣🥞 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -1,42 +1,52 @@
-<!-- Unit 6 Project
+<!-- Unit 7 Project
 Requirements
-[  ] three different shapes
-[  ] three different RGB colors
-[  ] three comments 
-[  ] three new HTML elements 
+[  ] three variables
+[  ] animation that moves position
+[  ] animation that changes size
+[  ] three new HTML elements/CSS Declarations
 
 Select ONE Additional 
-[ no ] Feature 1 - three different strokeWeight() commands
-[ no ] Feature 2 - Add a second <canvas>
-[ no ] Feature 3 - Change Tab Title & Image
-[ no ] Feature 4 - Typewriter Animation
-[ no ] Feature 5 - Gradient Background
+[ no ] Feature 1 - Use an Incrementing Shortcut 
+[ no ] Feature 2 - Move Object with Mouse
+[ no ] Feature 3 - Repeat Animation
+[ no ] Feature 4 - Text on the Canvas
+[ no ] Feature 5 - Animate a color change
 -->
+
 
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Unit 6 Project</title>
+    <title>Unit 7 Project</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.6.6/processing.min.js"></script>
     <style></style>
   </head>
 
   <body>
-    <div class="container">
+    <h1>
+      New Year, New Me
+    </h1>
+    <div class="main">
+      <canvas id="myCanvas" data-processing-sources="myP5Code.pde"> </canvas>
       <div>
-        <h2 id="start">How it started.</h2>
-        <img
-          class="pic" src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c7/Chill_guy_original_artwork.jpg/220px-Chill_guy_original_artwork.jpg"
-        />
-      </div>
-      <div>
-        <h2 id="end">How it ended.</h2>
-        <canvas id="myCanvas" data-processing-sources="myP5Code.pde"> </canvas>
+        <h2>
+          2025 Goals
+        </h2>
+        <ol>
+          <li>Spend More Time Coding </li>
+          <li> Read More</li>
+          <li>eat more greens</li>
+          <li> get a bigger butt</li>
+          <li> get into howard</li>
+          <li> all my grades wil be 88 and above</li>
+          
+        </ol>
       </div>
     </div>
+        
   </body>
 </html>
 
